# WeWrite

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  install.sh  mcp_knowledge_server.py  opencode.json  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml
.opencode/skills/: code-standards.md  data-collection.md  development-workflow.md  product-feature-design.md  quality-check.md  wechat-publish.md
config/: auto_publish.json
docs/: README.md  component-relationship.md  cost-optimization.md  feature-roadmap.md  memory_comparison.md  sub-agent-test-log.md
hooks/: check_quality.py  validate_json.py
knowledge/articles/: 011e8944-067d-4bce-b064-ac2c0a609f65.json  01a751a2-a2e0-47ca-847c-9acfcfdee7fc.json  01ec66ba-3ff2-46e8-91a2-7cafc8f19ea5.json  021072eb-83f4-46fe-b95c-6ce98049ec05.json  02345397-6074-44c3-afb1-561af688b9c7.json  0821c0a2-4c0e-4b12-ab7a-9109c43ffbf1.json  09c765ad-7a9b-4a62-be21-b54702736ef8.json  0dbd61d9-c1d8-4263-b18c-f4e298874197.json  0ede424e-c3fc-4b96-a5ef-5ecdcbc75b49.json  0fb98478-217f-486c-8ed2-20362725ec24.json  104146ee-ab40-4870-afba-bb57533bdf70.json  156ce208-0890-430d-ac8a-10be56537d8f.json  170b7912-b8df-4cc0-bd47-aac2a5b770cb.json  1713138c-b2ec-4075-a79c-cfa76ab02694.json  18b4e499-7185-4711-9674-ac7569e6b4e6.json  18f06686-b9c5-4989-a536-932ddfc3d0dc.json  1980cec3-32f3-4f87-85f4-754546ea1ed0.json  1a096207-8780-4607-a558-23b936a64159.json  1b1de9fc-a429-4d7d-8b59-56e5a515bb55.json  (+121 more)
pipeline/: __init__.py  cover_generator.py  model_client.py  pipeline.py  rss_sources.yaml  wechat_api.py
scripts/: generate_knowledge_site.py  publish_wechat.py  scheduler.py  sync_docs.py  test_web.py
tests/: conftest.py  test_model_client.py  test_pipeline.py  test_validate_json.py
web/: app.py
web/static/: style.css
(+21 files in other folders)
